Added build commands that verify what the framework ships beside its classes stays reachable as a module and in a native image
The test-modular command runs a probe inside the named module that reads the version resource and loads the engine error template, and the test-native command builds a native image and checks that the version resource was embedded, with a packaging job in the workflow that runs them both.